Details
-
Bug
-
Status: Resolved
-
Major
-
Resolution: Fixed
-
None
Description
The min_max compute function does not support the following types but should:
- time32
- time64
- timestamp
- null
- binary
- large_binary
- fixed_size_binary
- string
- large_string
Attachments
Issue Links
- is a parent of
-
ARROW-13410 [C++] Implement min_max kernel for array[string]
- Closed
- is duplicated by
-
ARROW-13758 [C++] Expand min_max/hash_min_max type support
- Closed
- supercedes
-
ARROW-13410 [C++] Implement min_max kernel for array[string]
- Closed
- links to