ARROW-13882: [C++] Support more types in min_max