cpp/src/arrow/compute/kernels/scalar_temporal.cc
@@ -858,7 +858,7 @@ std::shared_ptr<ScalarFunction> MakeTemporal(
       }
 
       case WithTimestamps: {
-        for (auto unit : AllTimeUnits()) {
+        for (auto unit : TimeUnit::values()) {
           InputType in_type{match::TimestampTypeUnit(unit)};
           switch (unit) {
             case TimeUnit::SECOND: {
@@ -914,7 +914,7 @@ std::shared_ptr<ScalarFunction> MakeSimpleUnaryTemporal(
         break;
       }
       case WithTimestamps: {
-        for (auto unit : AllTimeUnits()) {
+        for (auto unit : TimeUnit::values()) {
           InputType in_type{match::TimestampTypeUnit(unit)};
           switch (unit) {
             case TimeUnit::SECOND: {
