cpp/src/arrow/type_fwd.h
@@ -225,6 +225,9 @@ struct Date64Scalar;
 struct TimeUnit {
   /// The unit for a time or timestamp DataType
   enum type { SECOND = 0, MILLI = 1, MICRO = 2, NANO = 3 };
+
+  /// Iterate over all valid time units
+  static const std::vector<TimeUnit::type>& values();
 };
 
 class TimeType;
